# fa-learn

./: .gitignore  README.md  alembic.ini  crud.py  item_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  repositories.py  router.py
core/: config.py
core/models/: db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
migration/: env.py
migration/versions/: 2023_10_31_0914-c1869538778a_create_account_table.py  2023_10_31_0927-c5c1ac2e36d0_create_user.py  2023_10_31_0933-e5a53aa43d46_create_post.py  2023_10_31_2000-20000538bc10_add_profile.py
users/: cruds.py  shemas.py  views.py
