[tool.poetry]
name = "suren"
version = "0.1.0"
description = ""
authors = ["PyPack <serg.karetnuk333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
